# airport-cli

./: README.md  pyproject.toml
src/airportcli/: cli.py
